tests/new_bad_allocator_readonly.stderr
tests/new_bad_allocator_readonly.hop:5:36: error: HOP2004: type mismatch
