tests/new_bad_allocator_readonly.hop
// Verifies alloc bad allocator read-only.
fn main() i32 {
	var ma Allocator
	var ro &Allocator = &ma
	var p  *i32       = alloc i32 in ro
	return p as i32
}
